--- a/views/index.phtml
+++ b/views/index.phtml
@@ -101,9 +101,9 @@
 				<ul>
 				<li class="title">
 				<a <?=$style['dependent'] ? 'class="dependent" ' : ''
-					?>href="<?=htmlentities($href)?><?=strpos($href, '?') === false ? '?' : '&amp;'?>install=1"><?=htmlspecialchars($style['title'])?></a>
+					?>href="<?=htmlentities($href)?>"><?=htmlspecialchars($style['title'])?></a>
 				</li>
-				<li class="source"><a href="<?=htmlentities($href)?>">[View Source]</a></li>
+				<li class="source"><a href="<?=htmlentities($href)?><?=strpos($href, '?') === false ? '?' : '&amp;'?>source=1">[View Source]</a></li>
 				<li><ul class="metadata"><li class="updated"><?=$date?></li><?
 					if (!$style['valid']) {
 						?><li class="invalid">Invalid</li><?
