Update blurb at the top of the Zotero Style Repo

--- a/views/index.phtml
+++ b/views/index.phtml
@@ -36,7 +36,7 @@
 		<div id="stylesPane">
 			<h1>Zotero Style Repository</h1>
 			
-			<p>Here you can find citation styles for use with <a href="http://www.zotero.org/">Zotero</a> 2.1 (or higher) and other <a href="http://citationstyles.org/">CSL</a> 1.0–compatible clients. If you can't find what you need here, you can <a href="http://www.zotero.org/support/dev/citation_styles">create your own citation style</a>.</p>
+			<p>Here you can find <a href="http://citationstyles.org/">Citation Style Language</a> 1.0.1 citation styles for use with <a href="http://www.zotero.org/">Zotero</a> and other CSL 1.0.1–compatible software. For more information on using CSL styles with Zotero, see the <a href="http://www.zotero.org/support/styles">Zotero wiki</a>.</p>
 			
 			<div id="searchPane" style="display: none">
 				<h2>Style Search</h2>
