Don't bind search field events until loaded

--- a/views/index.phtml
+++ b/views/index.phtml
@@ -42,7 +42,8 @@
 				<h2>Style Search</h2>
 				
 				<div id="searchFields">
-					<p id="searchFieldBox"><input id="searchField" type="search" size="25" placeholder="Title Search" autofocus="autofocus" onkeyup="ZSR.Search.onSearchKeyUp(event, this)" onkeypress="ZSR.Search.onSearchKeyPress(event)" onchange="ZSR.Search.onChange(this)"/></p>
+					<p id="searchFieldBox"><input id="searchField" type="search" size="25"
+							placeholder="Title Search" autofocus="autofocus"/></p>
 					<p id="dependentToggleBox"><label title="Check this option to hide dependent styles that differ in name only."><input id="dependentToggle" type="checkbox" onclick="ZSR.Search.startSearch()"/>Show only unique styles</label></p>
 					
 					<div id="formatsBox" class="categoryBox">
