--- a/views/index.phtml
+++ b/views/index.phtml
@@ -31,54 +31,17 @@
 	</head>
 	
 	<body>
-		<div id="stylesPane">
+		<div class="page-wrapper">
 			<h1>Zotero Style Repository</h1>
 			
 			<p>Here you can find <a href="http://citationstyles.org/">Citation Style Language</a> 1.0.1 citation styles for use with <a href="http://www.zotero.org/">Zotero</a> and other CSL 1.0.1–compatible software. For more information on using CSL styles with Zotero, see the <a href="http://www.zotero.org/support/styles">Zotero wiki</a>.</p>
-			
-			<div id="searchPane">
-				<h2>Style Search</h2>
-				
-				<div id="searchFields">
-					<p id="searchFieldBox">
-						<input id="searchField" type="search" size="25" placeholder="Title Search" autofocus="autofocus"/>
-					</p>
-					<p id="dependentToggleBox">
-						<label title="Check this option to hide dependent styles that differ in name only.">
-							<input id="dependentToggle" type="checkbox" />
-							Show only unique styles
-						</label>
-					</p>
-					
-					<div id="formatsBox" class="categoryBox">
-						<p>Format:</p>
-						<ul id="formats">
-							<li class="loading">Loading…</li>
-						</ul>
-						<div style="clear:left"></div>
-					</div>
-					
-					<div id="fieldsBox" class="categoryBox">
-						<p>Fields:</p>
-						<ul id="fields">
-							<li class="loading">Loading…</li>
-						</ul>
-						<div style="clear:left"></div>
-					</div>
-				</div>
-				
-				<div id="loading" style="visibility: hidden">Loading…</div>
-				<div style="clear:left"></div>
-			</div>
 
-			<div id="container"></div>
+			<div id="zsr-container"></div>
 		</div>
-
-		<button id="view-source" style="display: none">View Source</button>
+		
 		<script src="<?=staticFile('/styles-files/js/zsr.js')?>"></script>
-
 		<script>
-			var zsr = new ZSR(document.getElementById('container'));
+			var zsr = new ZSR(document.getElementById('zsr-container'));
 		</script>
 	</body>
 </html>
