--- a/frontend/scss/style.scss
+++ b/frontend/scss/style.scss
@@ -33,8 +33,9 @@ h2 {
 	max-width: 1010px;
 	min-height: 140px;
 	min-width: 720px;
-	padding: 0 1em 1em;
-	position: relative;
+	padding: 0 1em;
+	display: flex;
+	flex-direction: row;
 
 	.fields-list,
 	.formats-list {
@@ -56,6 +57,48 @@ h2 {
 				background: $highlight-background-color;
 				border: 1px solid $highlight-color;
 			}
+		}
+	}
+}
+
+.search-field {
+	font-size: 16px;
+	width: 255px;
+	max-width: 255px;
+	margin-top: 1em;
+}
+
+.style-list {
+	li {
+		margin-bottom: .6em;
+		line-height: 1.2em;
+	}
+
+	.metadata {
+		font-size: .85em;
+		margin-left: 1.5em;
+	}
+}
+
+.search-pane-col-1 {
+	flex: 0 0 260px;
+	padding-top: 1.5em;
+}
+
+.search-pane-col-2 {
+	p {
+		display: flex;
+		flex-direction: row;
+
+		strong {
+			padding-top: 0.5em;
+			min-width: 100px;
+			text-align: right;
+		}
+
+		ul {
+			padding: 0 0 0 0.5em;
+			margin: 0;
 		}
 	}
 }
