--- a/frontend/scss/style.scss
+++ b/frontend/scss/style.scss
@@ -7,11 +7,7 @@ $popover-color: #000;
 $popover-background-color: #fff;
 $popover-box-shadow-color: rgba(0, 0, 0, .15);
 
-$view-source-button-color: #232323;
-$view-source-button-border-color: rgba(0, 0, 0, .65);
-$view-source-button-background-color: #fff;
-$view-source-button-background-color-active: #78c2ff;
-$view-source-button-box-shadow-color: rgba(0, 0, 0, .2);
+$view-source-button-color: #000;
 
 $search-pane-button-color: $color;
 $search-pane-button-border-color: $accent-color;
@@ -225,27 +221,16 @@ h2 {
 }
 
 .style-view-source {
-	background-color: $view-source-button-background-color;
-	border: 1px solid $view-source-button-border-color;
-	border-radius: 4px;
-	box-shadow: 0 1px 1px 0 $view-source-button-box-shadow-color;
-	box-sizing: border-box;
 	color: $view-source-button-color;
-	cursor: default;
 	display: none;
-	font-size: x-small;
+	font-size: 11px;
 	line-height: .9em;
 	margin-left: 10px;
 	padding: 2px 6px 3px;
 	text-align: center;
-	text-decoration: none;
 	vertical-align: middle;
 
 	li:hover & {
 		display: inline;
-	}
-
-	&:active {
-		background-color: $view-source-button-background-color-active;
 	}
 }
