Avoid page reload when clicking individual style link. #24
* Also reduce spacing between "Link" and "Source" buttons

--- a/frontend/scss/style.scss
+++ b/frontend/scss/style.scss
@@ -220,17 +220,26 @@ h2 {
 	word-wrap: normal;
 }
 
-.style-view-source {
+
+
+.style-view-source,
+.style-individual-link {
 	color: $view-source-button-color;
 	display: none;
 	font-size: 11px;
 	line-height: .9em;
-	margin-left: 10px;
+	margin-left: 2px;
 	padding: 2px 6px 3px;
 	text-align: center;
 	vertical-align: middle;
+	cursor: pointer;
+	text-decoration: underline;
 
 	li:hover & {
 		display: inline;
 	}
+}
+
+.style-individual-link {
+	margin-left: 10px;
 }
