Include citations in preview popups (#31)
Resolves #30

--- a/frontend/scss/style.scss
+++ b/frontend/scss/style.scss
@@ -243,3 +243,9 @@ h2 {
 .style-individual-link {
 	margin-left: 10px;
 }
+
+.inline-citation {
+	background: $accent-background-color;
+	padding: 0.5em;
+	margin: 0.5em 0;
+}
