--- a/views/index.phtml
+++ b/views/index.phtml
@@ -33,9 +33,10 @@
 
 <body>
     <div class="page-wrapper">
-        <h1>Zotero Style Repository</h1>
+        <?php if ($client)) {
+        ?><h1>Zotero Style Repository</h1>
         <p id="intro">Here you can find <a href="http://citationstyles.org/">Citation Style Language</a> 1.0.1 citation styles for use with <a href="https://www.zotero.org/">Zotero</a> and other CSL 1.0.1–compatible software. For more information on using CSL styles with Zotero, see the <a href="https://www.zotero.org/support/styles">Zotero wiki</a>.</p>
-        <div id="zsr-container">
+        <?php } ?><div id="zsr-container">
             <div>
                 <div class="search-pane">
                     <div class="search-pane-col-1">
