--- a/views/index.phtml
+++ b/views/index.phtml
@@ -49,8 +49,8 @@
                         </p>
                     </div>
                     <div class="search-pane-col-2">
-                        <p><strong>Format:</strong><span>Loading...</span></p>
-                        <p><strong>Fields:</strong><span>Loading...</span></p>
+                        <p><strong>Format:</strong><span>Loading…</span></p>
+                        <p><strong>Fields:</strong><span>Loading…</span></p>
                     </div>
                 </div>
                 <div class="styles-loading"></div>
