--- a/frontend/scss/style.scss
+++ b/frontend/scss/style.scss
@@ -51,34 +51,36 @@ h2 {
 		width: 90%;
 
 		li {
-			background-color: var(--material-button);
-			box-shadow:
-				0px 1px 0.75px 0px var(--fill-quinary),
-				0px 0.25px 0.25px 0px var(--color-border);
-			;
-			border: 0.5px solid var(--fill-senary);
-			color: var(--color-primary);
-			cursor: default;
 			display: inline-block;
 			margin: 4px 7px 4px 0;
-			padding: 3px 6px;
-			transition: border 0.15s ease, background-color 0.15s ease;
 
-			&:hover {
-				background-color: var(--accent-azure);
-				color: var(--accent-white);
-			}
-
-			&.field-active,
-			&.format-active {
-				background: var(--accent-blue);
-				border-color: var(--accent-blue);
-				color: var(--accent-white);
+			> button {
+				background-color: var(--material-button);
+				box-shadow:
+					0px 1px 0.75px 0px var(--fill-quinary),
+					0px 0.25px 0.25px 0px var(--color-border);
+				border: 0.5px solid var(--fill-senary);
+				color: var(--color-primary);
+				cursor: default;
+				padding: 3px 6px;
+				font-size: 1em;
 
 				&:hover {
 					background-color: var(--accent-azure);
+					color: var(--accent-white);
+				}
+
+				&.field-active,
+				&.format-active {
+					background: var(--accent-blue);
 					border-color: var(--accent-blue);
 					color: var(--accent-white);
+
+					&:hover {
+						background-color: var(--accent-azure);
+						border-color: var(--accent-blue);
+						color: var(--accent-white);
+					}
 				}
 			}
 		}
